# emlisp

./: .gitignore  CMakeLists.txt  README.md
inc/: emlisp.h  emlisp_autobind.h
src/: emlisp.cpp  eval.cpp  funcs.cpp  lisp_std_template.cpp  memory.cpp  reader.cpp  src_embed_gen.cpp  std.lisp
src/autobind/: main.cpp  parser.cpp  parser.h  token.h  tokenizer.cpp
tests/: extern_values.cpp  repl.cpp  std.lisp
tests/autobind/: api.h  test.cpp
tests/eval/: basic.lisp  driver.cpp  functions.lisp  macros.lisp
tests/parser/: driver.cpp  in_comments.txt  in_lists.txt  in_numbers.txt  in_quote.txt  in_strs.txt  out_comments.txt  out_lists.txt  out_numbers.txt  out_quote.txt  out_strs.txt
